export class AnalizadorPulsaciones {
    private umbralTaquicardia: number;
    private umbralBradicardia: number;

    constructor() {}

    public analizarMedicion(medicion: MedicionPulsacion, paciente: Paciente): TipoAnomaliaCardiaca {}
    public calcularEstadisticas(mediciones: MedicionPulsacion[]): EstadisticasPulsacion {}
    public detectarPatronesAnormales(mediciones: MedicionPulsacion[]): string[] {}
    public generarRecomendaciones(estadisticas: EstadisticasPulsacion, anomalias: TipoAnomaliaCardiaca[]): string[] {}
    public evaluarRiesgoCardiovascular(paciente: Paciente, mediciones: MedicionPulsacion[]): NivelRiesgo {}
}