export enum EstadoSesion {
    INICIADA = "INICIADA",
    PAUSADA = "PAUSADA",
    FINALIZADA = "FINALIZADA",
    CANCELADA = "CANCELADA"
}
