export enum NivelPrioridad {
    BAJA = "BAJA",
    MEDIA = "MEDIA",
    ALTA = "ALTA",
    CRITICA = "CRITICA"
}