export enum NivelRiesgo {
    BAJO = "BAJO",
    MEDIO = "MEDIO",
    ALTO = "ALTO",
    CRITICO = "CRITICO"
}
