export class SistemaMonitoreo {
    private pacientes: Map<string, Paciente>;
    private mediciones: Map<string, MedicionPulsacion[]>;
    private sesiones: Map<string, SesionMonitoreo[]>;
    private analizador: AnalizadorPulsaciones;
    private gestorReportes: GestorReportes;

    constructor() {}

    public registrarPaciente(paciente: Paciente): void {}
    public obtenerPaciente(id: string): Paciente | null {}
    public registrarMedicion(medicion: MedicionPulsacion): void {}
    public obtenerMedicionesPaciente(pacienteId: string): MedicionPulsacion[] {}
    public crearSesionMonitoreo(sesion: SesionMonitoreo): void {}
    public obtenerSesionesPaciente(pacienteId: string): SesionMonitoreo[] {}
    public analizarDatosPaciente(pacienteId: string): string {}
    public generarReportePaciente(pacienteId: string): string {}
    public exportarDatosPaciente(pacienteId: string, formato: string): string {}
}