export enum TipoAlerta {
    ANOMALIA_DETECTADA = "ANOMALIA_DETECTADA",
    SESION_FINALIZADA = "SESION_FINALIZADA",
    PATRON_ANORMAL = "PATRON_ANORMAL",
    RIESGO_ELEVADO = "RIESGO_ELEVADO"
}
