export enum TipoAnomaliaCardiaca {
    NORMAL = "NORMAL",
    TAQUICARDIA = "TAQUICARDIA",
    BRADICARDIA = "BRADICARDIA",
    ARRITMIA = "ARRITMIA",
    CRITICA = "CRITICA"
}